[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/FontColorPicker.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Note.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[node name="Note" type="Button"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1019.0
margin_bottom = 19.0
rect_min_size = Vector2( 0, 42 )
mouse_filter = 1
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1009.0
margin_bottom = 37.0
mouse_filter = 1
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "test"
placeholder_text = "Text"

[node name="ColorPickerButton" parent="MarginContainer/LineEdit" instance=ExtResource( 1 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -12.0
margin_top = -16.0
margin_bottom = 16.0
mouse_filter = 1
text_edit_path = NodePath("..")

[connection signal="focus_entered" from="MarginContainer/LineEdit" to="." method="_on_LineEdit_focus_entered"]
[connection signal="text_changed" from="MarginContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="color_changed" from="MarginContainer/LineEdit/ColorPickerButton" to="." method="set_font_color"]
